# django_tdd

./: .gitignore  .mcp.json  Makefile  README.md  pyproject.toml
backend/: functional_tests.py  functional_tests_pytest.py  functional_tests_unit.py  pyproject.toml
backend/app/lists/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
backend/app/lists/migrations/: 0001_initial.py  0002_list_item_list.py
backend/app/lists/templates/: base.html  home.html  list.html
backend/app/lists/tests/: test_forms.py  tests_models.py  tests_views.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/functional_tests_pytest/: conftest.py  test_layout_and_styling.py  test_list_item_validation.py  test_main.py  test_simple_list_creation.py
backend/functional_tests_unit/: base.py  test.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py
deploy_tools/: gunicorn-systemd.template.service
