[project]
name = "django-tdd"
version = "0.1.0"
description = "Python - Разработка на основе тестирования"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
]

[dependency-groups]
test = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "selenium>=4.40.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
