[project]
name = "django-tdd"
version = "0.1.0"
description = "Python - Разработка на основе тестирования"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
test = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "selenium>=4.40.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "DJ",    # flake8-django
]

[tool.ruff.lint.isort]
known-first-party = ["app", "lists", "config"]
